--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 const extractedIds = extractId(url);
                 
                 if (extractedIds.length === 0) {
-                    alert(`No valid redirect patterns found in: ${url}. Use the pattern <code>[[type-entity-id]]</code> in your URL.`;
+                    alert(`No valid redirect patterns found in: ${url}. Use the pattern <code>[[type-entity-id]]</code> in your URL.`);
                     return;
                 }
                 
